package structural.decorator.imagedecorator;

public interface Image {
    String ShowImage();
}
